Update gallery file to fix image misalignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,6 +212,13 @@ main {
 }
 
 /* ------------------------------------ Gallery Page -- */
+#gallery-container{
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
 .gallery-centre {
     text-align: center;
     padding-bottom: 50px;
@@ -225,10 +232,8 @@ main {
 
 .gallery-responsive {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-rows: minmax(100px, auto);
-    column-gap: 100px;
-    column-gap: 125px;
     row-gap: 50px;
 }
 
